# leaf

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README.txt
cmake/: spirv.cmake
opt/slang/cmake/: slangConfigVersion.cmake  slangTargets-release.cmake
opt/slang/include/: slang-tag-version.h
src/: camera.cpp  cube.cpp  descriptorAllocator.cpp  descriptorWriter.cpp  leafEngine.cpp  leafGltf.cpp  leafInit.cpp  leafStructs.cpp  leafUtil.cpp  main.cpp  pipelineBuilder.cpp  vkutil.cpp  vulkanDestroyer.cpp
src/include/: body.h  camera.h  constants.h  cube.h  descriptorAllocator.h  descriptorWriter.h  entity.h  leafEngine.h  leafEngine.hpp  leafGltf.h  leafInit.h  leafStructs.h  leafUtil.h  pipelineBuilder.h  types.h  vkutil.h  vulkanDestroyer.h
src/shaders/: gradient.comp  gradient.compute.slang  test.slang  triangle.frag  triangle.vert  triangleMesh.vert
